k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-tracker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-tracker-app
  template:
    metadata:
      labels:
        app: personal-tracker-app
    spec:
      containers:
        - name: app
          image: iacobstev/personal-tracker-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
