k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-tracker-app
spec:
  selector:
    app: personal-tracker-app
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
