k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-tracker-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-tracker-app
                port:
                  number: 5000
